--- a/test/rpx.html
+++ b/test/rpx.html
@@ -1,1 +1,8 @@
-<script src="http://localhost:3000/javascripts/cookie_test.js"></script>
+<html>
+  <head>
+    <script type="text/javascript" src="http://localhost:3000/javascripts/cookie_test.js"></script>
+  </head>
+<body>
+  foobar
+</body>
+</html>
