--- a/test/rpx.html
+++ b/test/rpx.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script type="text/javascript" src="http://localhost:3000/javascripts/cookie_test.js"></script>
+    <script type="text/javascript" src="http://localhost:3000/beacon.js"></script>
   </head>
 <body>
   foobar
