--- a/test/uc.html
+++ b/test/uc.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <head>
+    <script type="application/javascript" src="https://app.usercentrics.eu/latest/main.js" id="mnqGFE5nL"></script>
+  </head>
   <body>
     <p>Hi there!</p>
   </body>
