--- a/test/uc.html
+++ b/test/uc.html
@@ -4,5 +4,12 @@
   </head>
   <body>
     <p>Hi there!</p>
+    
+    <script type="text/plain">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+      var pageTracker = _gat._getTracker("UA-5420575-1");
+      pageTracker._trackPageview();
+    </script>
   </body>
 </html>
