--- a/test/uc.html
+++ b/test/uc.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script type="application/javascript" src="https://app.usercentrics.eu/latest/main.js" id="mnqGFE5nL"></script>
+    <script id="usercentrics-cmp" data-settings-id="mnqGFE5nL" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
   </head>
   <body>
     <p>Hi there!</p>
