--- a/test/uc.html
+++ b/test/uc.html
@@ -5,8 +5,8 @@
   <body>
     <p>Hi there!</p>
     
-    <script type="text/plain" data-usercentrics="Google Analytics" async="" src="https://www.googletagmanager.com/gtag/js?id=UA-5420575-1"></script>
-    <script type="text/plain" data-usercentrics="Google Analytics">
+    <script type="text/plain" data-usercentrics="Google Tag Manager" async="" src="https://www.googletagmanager.com/gtag/js?id=UA-5420575-1"></script>
+    <script type="text/plain" data-usercentrics="Google Tag Manager">
 
       window.dataLayer = window.dataLayer || [] ;
       function gtag(){dataLayer.push(arguments);}
