--- a/test/uc.html
+++ b/test/uc.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script id="usercentrics-cmp" data-settings-id="a5vEF9pXA" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
+    <script id="usercentrics-cmp" data-settings-id="pU78ZrwFh" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
   </head>
   <body>
     <p>Hi there!</p>
